--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "from google.oauth2 import service_account\n",
     "from googleapiclient.discovery import build\n",
@@ -95,15 +96,13 @@
     "        if 'weight_in_kg' in df_clean.columns:\n",
     "            df_clean = df_clean.rename(columns={'weight_in_kg': 'weight'})\n",
     "        \n",
-    "        # Convert numeric columns\n",
-    "        numeric_columns = ['quantity', 'weight']\n",
     "        for column in df_clean.columns:\n",
     "            df_clean[column] = df_clean[column].astype(str).str.strip().str.lower()\n",
-    "            if column in numeric_columns:\n",
-    "                try:\n",
-    "                    df_clean[column] = pd.to_numeric(df_clean[column].str.replace(',', ''), errors='coerce').fillna(0)\n",
-    "                except (ValueError, TypeError):\n",
-    "                    print(f\"Warning: Could not convert {column} to numeric\")\n",
+    "            try:\n",
+    "                numeric_values = pd.to_numeric(df_clean[column].str.replace(',', ''))\n",
+    "                df_clean[column] = numeric_values\n",
+    "            except (ValueError, TypeError):\n",
+    "                pass\n",
     "        \n",
     "        return df_clean\n",
     "    except Exception as e:\n",
@@ -148,7 +147,6 @@
     "        return df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to standardize dates: {str(e)}\")\n",
-    "        \n",
     "\n",
     "def remove_opening_stock(df: pd.DataFrame, column_name: str) -> Tuple[pd.DataFrame, pd.DataFrame]:\n",
     "    try:\n",
@@ -177,13 +175,6 @@
     "        summary_df = pd.DataFrame({'year_month': all_year_months})\n",
     "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
     "        summary_df = summary_df[['month', 'year_month']]\n",
-    "        \n",
-    "        # Ensure numeric columns are float\n",
-    "        for df in [stock_inflow_df, release_df]:\n",
-    "            if 'quantity' in df.columns:\n",
-    "                df['quantity'] = pd.to_numeric(df['quantity'], errors='coerce').fillna(0)\n",
-    "            if 'weight' in df.columns:\n",
-    "                df['weight'] = pd.to_numeric(df['weight'], errors='coerce').fillna(0)\n",
     "                \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
@@ -219,15 +210,12 @@
     "            'total_gizzard_release_weight': ('gizzard_release', 'weight')\n",
     "        }\n",
     "        \n",
-    "        # Initialize columns with zeros\n",
-    "        for col_name in summary_columns.keys():\n",
-    "            summary_df[col_name] = 0.0\n",
-    "        \n",
-    "        # Fill in values from summaries\n",
     "        for col_name, (summary_key, metric) in summary_columns.items():\n",
     "            if metric in product_summaries[summary_key].columns:\n",
     "                summary_df[col_name] = summary_df['year_month'].map(\n",
-    "                    product_summaries[summary_key][metric]).fillna(0.0)\n",
+    "                    product_summaries[summary_key][metric]).fillna(0)\n",
+    "            else:\n",
+    "                summary_df[col_name] = 0\n",
     "\n",
     "        # Sort by year_month and calculate running balances\n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
@@ -235,39 +223,38 @@
     "\n",
     "        # Calculate and carry forward balances\n",
     "        previous_balances = {\n",
-    "            'chicken_quantity': 0.0,\n",
-    "            'chicken_weight': 0.0,\n",
-    "            'gizzard_weight': 0.0\n",
+    "            'chicken_quantity': 0,\n",
+    "            'chicken_weight': 0,\n",
+    "            'gizzard_weight': 0\n",
     "        }\n",
     "\n",
     "        for index in summary_df.index:\n",
-    "            # Ensure all numeric columns are float\n",
-    "            for col in summary_df.columns:\n",
-    "                if col not in ['month', 'year_month', 'sort_date']:\n",
-    "                    summary_df[col] = pd.to_numeric(summary_df[col], errors='coerce').fillna(0.0)\n",
-    "            \n",
     "            # Add previous balances to current inflow\n",
     "            summary_df.loc[index, 'total_chicken_inflow_quantity'] += previous_balances['chicken_quantity']\n",
     "            summary_df.loc[index, 'total_chicken_inflow_weight'] += previous_balances['chicken_weight']\n",
     "            summary_df.loc[index, 'total_gizzard_inflow_weight'] += previous_balances['gizzard_weight']\n",
     "\n",
     "            # Calculate new balances\n",
-    "            previous_balances['chicken_quantity'] = max(0.0, \n",
-    "                float(summary_df.loc[index, 'total_chicken_inflow_quantity']) - \n",
-    "                float(summary_df.loc[index, 'total_chicken_release_quantity']))\n",
+    "            previous_balances['chicken_quantity'] = max(0, \n",
+    "                summary_df.loc[index, 'total_chicken_inflow_quantity'] - \n",
+    "                summary_df.loc[index, 'total_chicken_release_quantity'])\n",
     "            \n",
-    "            previous_balances['chicken_weight'] = max(0.0,\n",
-    "                float(summary_df.loc[index, 'total_chicken_inflow_weight']) - \n",
-    "                float(summary_df.loc[index, 'total_chicken_release_weight']))\n",
+    "            previous_balances['chicken_weight'] = max(0,\n",
+    "                summary_df.loc[index, 'total_chicken_inflow_weight'] - \n",
+    "                summary_df.loc[index, 'total_chicken_release_weight'])\n",
     "            \n",
-    "            previous_balances['gizzard_weight'] = max(0.0,\n",
-    "                float(summary_df.loc[index, 'total_gizzard_inflow_weight']) - \n",
-    "                float(summary_df.loc[index, 'total_gizzard_release_weight']))\n",
+    "            previous_balances['gizzard_weight'] = max(0,\n",
+    "                summary_df.loc[index, 'total_gizzard_inflow_weight'] - \n",
+    "                summary_df.loc[index, 'total_gizzard_release_weight'])\n",
     "\n",
     "        # Sort and format for output\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False)\n",
     "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
     "        summary_df = summary_df.drop('sort_date', axis=1)\n",
+    "        \n",
+    "        print(\"\\nFinal summary dataframe structure:\")\n",
+    "        print(summary_df.head())\n",
+    "        print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
     "        \n",
     "        return summary_df\n",
     "    except Exception as e:\n",
