--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -71,7 +71,7 @@
     "        \n",
     "        if 'date' in df.columns:\n",
     "            print(f\"\\nUnique date values in {worksheet_name}:\")\n",
-    "            print(df['date'].unique())\n",
+    "            # print(df['date'].unique())\n",
     "        \n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -80,7 +80,7 @@
     "def standardize_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        print(\"\\nStandardizing dataframe...\")\n",
-    "        print(\"Original columns:\", df.columns.tolist())\n",
+    "        # print(\"Original columns:\", df.columns.tolist())\n",
     "        \n",
     "        df_clean = df.copy()\n",
     "        \n",
@@ -90,7 +90,7 @@
     "                          .str.replace(' ', '_')\n",
     "                          .str.replace('-', '_'))\n",
     "        \n",
-    "        print(\"Standardized columns:\", df_clean.columns.tolist())\n",
+    "        # print(\"Standardized columns:\", df_clean.columns.tolist())\n",
     "        \n",
     "        # Handle the weight_in_kg to weight rename\n",
     "        if 'weight_in_kg' in df_clean.columns:\n",
@@ -115,7 +115,7 @@
     "    try:\n",
     "        print(\"\\nStandardizing dates...\")\n",
     "        df = df.copy()\n",
-    "        print(\"Original unique date values:\", df['date'].unique())\n",
+    "        # print(\"Original unique date values:\", df['date'].unique())\n",
     "        \n",
     "        date_parsed = False\n",
     "        for format in DATE_FORMATS:\n",
@@ -141,8 +141,8 @@
     "        df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
     "        df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
     "        \n",
-    "        print(\"Processed unique months:\", df['month'].unique())\n",
-    "        print(\"Processed unique year_months:\", df['year_month'].unique())\n",
+    "        # print(\"Processed unique months:\", df['month'].unique())\n",
+    "        # print(\"Processed unique year_months:\", df['year_month'].unique())\n",
     "        \n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -155,7 +155,7 @@
     "        opening_stock_df = df[opening_stock_mask].copy()\n",
     "        main_df = df[~opening_stock_mask].copy()\n",
     "        \n",
-    "        print(f\"Found {len(opening_stock_df)} opening stock entries\")\n",
+    "        # print(f\"Found {len(opening_stock_df)} opening stock entries\")\n",
     "        print(f\"Remaining entries: {len(main_df)}\")\n",
     "        \n",
     "        return main_df, opening_stock_df\n",
@@ -166,8 +166,8 @@
     "    try:\n",
     "        print(\"\\nCreating summary dataframe...\")\n",
     "        \n",
-    "        print(\"\\nStock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
-    "        print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
+    "        # print(\"\\nStock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
+    "        # print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
     "        \n",
     "        all_year_months = sorted(list(set(stock_inflow_df['year_month'].unique()) | \n",
     "                                    set(release_df['year_month'].unique())))\n",
@@ -252,9 +252,8 @@
     "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
     "        summary_df = summary_df.drop('sort_date', axis=1)\n",
     "        \n",
-    "        print(\"\\nFinal summary dataframe structure:\")\n",
-    "        print(summary_df.head())\n",
-    "        print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
+    "        # print(\"\\nFinal summary dataframe structure:\")\n",
+    "        # print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
     "        \n",
     "        return summary_df\n",
     "    except Exception as e:\n",
@@ -273,7 +272,7 @@
     "        df_copy[col] = df_copy[col].astype(str)\n",
     "        df_copy[col] = df_copy[col].replace('nan', '')\n",
     "    \n",
-    "    print(f\"Prepared {len(df_copy)} rows for upload\")\n",
+    "    # print(f\"Prepared {len(df_copy)} rows for upload\")\n",
     "    return df_copy\n",
     "\n",
     "def upload_df_to_gsheet(df: pd.DataFrame, \n",
