--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "from google.oauth2 import service_account\n",
     "from googleapiclient.discovery import build\n",
@@ -71,7 +70,6 @@
     "        \n",
     "        if 'date' in df.columns:\n",
     "            print(f\"\\nUnique date values in {worksheet_name}:\")\n",
-    "            # print(df['date'].unique())\n",
     "        \n",
     "        return df\n",
     "    except Exception as e:\n",
@@ -80,7 +78,6 @@
     "def standardize_dataframe(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
     "        print(\"\\nStandardizing dataframe...\")\n",
-    "        # print(\"Original columns:\", df.columns.tolist())\n",
     "        \n",
     "        df_clean = df.copy()\n",
     "        \n",
@@ -89,8 +86,6 @@
     "                          .str.strip()\n",
     "                          .str.replace(' ', '_')\n",
     "                          .str.replace('-', '_'))\n",
-    "        \n",
-    "        # print(\"Standardized columns:\", df_clean.columns.tolist())\n",
     "        \n",
     "        # Handle the weight_in_kg to weight rename\n",
     "        if 'weight_in_kg' in df_clean.columns:\n",
@@ -115,7 +110,6 @@
     "    try:\n",
     "        print(\"\\nStandardizing dates...\")\n",
     "        df = df.copy()\n",
-    "        # print(\"Original unique date values:\", df['date'].unique())\n",
     "        \n",
     "        date_parsed = False\n",
     "        for format in DATE_FORMATS:\n",
@@ -141,9 +135,6 @@
     "        df['month'] = df['date'].dt.strftime('%b').str.lower()\n",
     "        df['year_month'] = df['date'].dt.strftime('%Y-%b')\n",
     "        \n",
-    "        # print(\"Processed unique months:\", df['month'].unique())\n",
-    "        # print(\"Processed unique year_months:\", df['year_month'].unique())\n",
-    "        \n",
     "        return df\n",
     "    except Exception as e:\n",
     "        raise DataProcessingError(f\"Failed to standardize dates: {str(e)}\")\n",
@@ -155,7 +146,6 @@
     "        opening_stock_df = df[opening_stock_mask].copy()\n",
     "        main_df = df[~opening_stock_mask].copy()\n",
     "        \n",
-    "        # print(f\"Found {len(opening_stock_df)} opening stock entries\")\n",
     "        print(f\"Remaining entries: {len(main_df)}\")\n",
     "        \n",
     "        return main_df, opening_stock_df\n",
@@ -166,16 +156,13 @@
     "    try:\n",
     "        print(\"\\nCreating summary dataframe...\")\n",
     "        \n",
-    "        # print(\"\\nStock Inflow Unique Year-Months:\", stock_inflow_df['year_month'].unique())\n",
-    "        # print(\"Release Unique Year-Months:\", release_df['year_month'].unique())\n",
-    "        \n",
     "        all_year_months = sorted(list(set(stock_inflow_df['year_month'].unique()) | \n",
     "                                    set(release_df['year_month'].unique())))\n",
     "        \n",
     "        summary_df = pd.DataFrame({'year_month': all_year_months})\n",
     "        summary_df['month'] = summary_df['year_month'].str.split('-').str[1].str.lower()\n",
     "        summary_df = summary_df[['month', 'year_month']]\n",
-    "                \n",
+    "        \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
     "                stock_inflow_df['product_type'] == PRODUCT_TYPES['CHICKEN']\n",
@@ -217,43 +204,70 @@
     "            else:\n",
     "                summary_df[col_name] = 0\n",
     "\n",
-    "        # Sort by year_month and calculate running balances\n",
+    "        # Sort by year_month \n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
     "        summary_df = summary_df.sort_values('sort_date')\n",
     "\n",
-    "        # Calculate and carry forward balances\n",
-    "        previous_balances = {\n",
-    "            'chicken_quantity': 0,\n",
-    "            'chicken_weight': 0,\n",
-    "            'gizzard_weight': 0\n",
-    "        }\n",
+    "        # Initialize opening stock and stock balance columns with zeros\n",
+    "        opening_stock_columns = [\n",
+    "            'chicken_quantity_opening_stock',\n",
+    "            'chicken_weight_opening_stock',\n",
+    "            'gizzard_weight_opening_stock'\n",
+    "        ]\n",
+    "        \n",
+    "        stock_balance_columns = [\n",
+    "            'chicken_quantity_stock_balance',\n",
+    "            'chicken_weight_stock_balance',\n",
+    "            'gizzard_weight_stock_balance'\n",
+    "        ]\n",
+    "        \n",
+    "        for column in opening_stock_columns + stock_balance_columns:\n",
+    "            summary_df[column] = 0\n",
     "\n",
-    "        for index in summary_df.index:\n",
-    "            # Add previous balances to current inflow\n",
-    "            summary_df.loc[index, 'total_chicken_inflow_quantity'] += previous_balances['chicken_quantity']\n",
-    "            summary_df.loc[index, 'total_chicken_inflow_weight'] += previous_balances['chicken_weight']\n",
-    "            summary_df.loc[index, 'total_gizzard_inflow_weight'] += previous_balances['gizzard_weight']\n",
+    "        # Get the current month (last row after sorting)\n",
+    "        current_month_idx = summary_df.index[-1]\n",
+    "        previous_month_idx = current_month_idx - 1\n",
     "\n",
-    "            # Calculate new balances\n",
-    "            previous_balances['chicken_quantity'] = max(0, \n",
-    "                summary_df.loc[index, 'total_chicken_inflow_quantity'] - \n",
-    "                summary_df.loc[index, 'total_chicken_release_quantity'])\n",
+    "        if previous_month_idx >= 0:\n",
+    "            # Set opening stock for current month based on previous month's difference\n",
+    "            summary_df.loc[current_month_idx, 'chicken_quantity_opening_stock'] = max(0,\n",
+    "                summary_df.loc[previous_month_idx, 'total_chicken_inflow_quantity'] -\n",
+    "                summary_df.loc[previous_month_idx, 'total_chicken_release_quantity']\n",
+    "            )\n",
     "            \n",
-    "            previous_balances['chicken_weight'] = max(0,\n",
-    "                summary_df.loc[index, 'total_chicken_inflow_weight'] - \n",
-    "                summary_df.loc[index, 'total_chicken_release_weight'])\n",
+    "            summary_df.loc[current_month_idx, 'chicken_weight_opening_stock'] = max(0,\n",
+    "                summary_df.loc[previous_month_idx, 'total_chicken_inflow_weight'] -\n",
+    "                summary_df.loc[previous_month_idx, 'total_chicken_release_weight']\n",
+    "            )\n",
     "            \n",
-    "            previous_balances['gizzard_weight'] = max(0,\n",
-    "                summary_df.loc[index, 'total_gizzard_inflow_weight'] - \n",
-    "                summary_df.loc[index, 'total_gizzard_release_weight'])\n",
+    "            summary_df.loc[current_month_idx, 'gizzard_weight_opening_stock'] = max(0,\n",
+    "                summary_df.loc[previous_month_idx, 'total_gizzard_inflow_weight'] -\n",
+    "                summary_df.loc[previous_month_idx, 'total_gizzard_release_weight']\n",
+    "            )\n",
     "\n",
-    "        # Sort and format for output\n",
+    "        # Calculate stock balances for current month\n",
+    "        summary_df.loc[current_month_idx, 'chicken_quantity_stock_balance'] = (\n",
+    "            summary_df.loc[current_month_idx, 'chicken_quantity_opening_stock'] +\n",
+    "            summary_df.loc[current_month_idx, 'total_chicken_inflow_quantity'] -\n",
+    "            summary_df.loc[current_month_idx, 'total_chicken_release_quantity']\n",
+    "        )\n",
+    "\n",
+    "        summary_df.loc[current_month_idx, 'chicken_weight_stock_balance'] = (\n",
+    "            summary_df.loc[current_month_idx, 'chicken_weight_opening_stock'] +\n",
+    "            summary_df.loc[current_month_idx, 'total_chicken_inflow_weight'] -\n",
+    "            summary_df.loc[current_month_idx, 'total_chicken_release_weight']\n",
+    "        )\n",
+    "\n",
+    "        summary_df.loc[current_month_idx, 'gizzard_weight_stock_balance'] = (\n",
+    "            summary_df.loc[current_month_idx, 'gizzard_weight_opening_stock'] +\n",
+    "            summary_df.loc[current_month_idx, 'total_gizzard_inflow_weight'] -\n",
+    "            summary_df.loc[current_month_idx, 'total_gizzard_release_weight']\n",
+    "        )\n",
+    "\n",
+    "        # Sort in descending order (newest first) and clean up\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False)\n",
     "        summary_df['year_month'] = summary_df['sort_date'].dt.strftime('%Y-%m')\n",
     "        summary_df = summary_df.drop('sort_date', axis=1)\n",
-    "        \n",
-    "        # print(\"\\nFinal summary dataframe structure:\")\n",
-    "        # print(\"\\nSummary columns:\", summary_df.columns.tolist())\n",
     "        \n",
     "        return summary_df\n",
     "    except Exception as e:\n",
@@ -272,7 +286,6 @@
     "        df_copy[col] = df_copy[col].astype(str)\n",
     "        df_copy[col] = df_copy[col].replace('nan', '')\n",
     "    \n",
-    "    # print(f\"Prepared {len(df_copy)} rows for upload\")\n",
     "    return df_copy\n",
     "\n",
     "def upload_df_to_gsheet(df: pd.DataFrame, \n",
