--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -204,11 +204,11 @@
     "            else:\n",
     "                summary_df[col_name] = 0\n",
     "\n",
-    "        # Sort by year_month \n",
+    "        # Sort by year_month in ascending order to process chronologically\n",
     "        summary_df['sort_date'] = pd.to_datetime(summary_df['year_month'], format='%Y-%b')\n",
     "        summary_df = summary_df.sort_values('sort_date')\n",
     "\n",
-    "        # Initialize opening stock and stock balance columns with zeros\n",
+    "        # Initialize opening stock and stock balance columns\n",
     "        opening_stock_columns = [\n",
     "            'chicken_quantity_opening_stock',\n",
     "            'chicken_weight_opening_stock',\n",
@@ -224,45 +224,40 @@
     "        for column in opening_stock_columns + stock_balance_columns:\n",
     "            summary_df[column] = 0\n",
     "\n",
-    "        # Get the current month (last row after sorting)\n",
-    "        current_month_idx = summary_df.index[-1]\n",
-    "        previous_month_idx = current_month_idx - 1\n",
+    "        # Calculate running balances for each month\n",
+    "        for i in range(len(summary_df)):\n",
+    "            if i == 0:\n",
+    "                # For the first month, opening stock is 0\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_quantity_opening_stock')] = 0\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_weight_opening_stock')] = 0\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('gizzard_weight_opening_stock')] = 0\n",
+    "            else:\n",
+    "                # For subsequent months, opening stock is previous month's balance\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_quantity_opening_stock')] = \\\n",
+    "                    summary_df.iloc[i-1, summary_df.columns.get_loc('chicken_quantity_stock_balance')]\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_weight_opening_stock')] = \\\n",
+    "                    summary_df.iloc[i-1, summary_df.columns.get_loc('chicken_weight_stock_balance')]\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('gizzard_weight_opening_stock')] = \\\n",
+    "                    summary_df.iloc[i-1, summary_df.columns.get_loc('gizzard_weight_stock_balance')]\n",
     "\n",
-    "        if previous_month_idx >= 0:\n",
-    "            # Set opening stock for current month based on previous month's difference\n",
-    "            summary_df.loc[current_month_idx, 'chicken_quantity_opening_stock'] = max(0,\n",
-    "                summary_df.loc[previous_month_idx, 'total_chicken_inflow_quantity'] -\n",
-    "                summary_df.loc[previous_month_idx, 'total_chicken_release_quantity']\n",
+    "            # Calculate stock balances for current month\n",
+    "            summary_df.iloc[i, summary_df.columns.get_loc('chicken_quantity_stock_balance')] = (\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_quantity_opening_stock')] +\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_chicken_inflow_quantity')] -\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_chicken_release_quantity')]\n",
     "            )\n",
-    "            \n",
-    "            summary_df.loc[current_month_idx, 'chicken_weight_opening_stock'] = max(0,\n",
-    "                summary_df.loc[previous_month_idx, 'total_chicken_inflow_weight'] -\n",
-    "                summary_df.loc[previous_month_idx, 'total_chicken_release_weight']\n",
-    "            )\n",
-    "            \n",
-    "            summary_df.loc[current_month_idx, 'gizzard_weight_opening_stock'] = max(0,\n",
-    "                summary_df.loc[previous_month_idx, 'total_gizzard_inflow_weight'] -\n",
-    "                summary_df.loc[previous_month_idx, 'total_gizzard_release_weight']\n",
+    "\n",
+    "            summary_df.iloc[i, summary_df.columns.get_loc('chicken_weight_stock_balance')] = (\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('chicken_weight_opening_stock')] +\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_chicken_inflow_weight')] -\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_chicken_release_weight')]\n",
     "            )\n",
     "\n",
-    "        # Calculate stock balances for current month\n",
-    "        summary_df.loc[current_month_idx, 'chicken_quantity_stock_balance'] = (\n",
-    "            summary_df.loc[current_month_idx, 'chicken_quantity_opening_stock'] +\n",
-    "            summary_df.loc[current_month_idx, 'total_chicken_inflow_quantity'] -\n",
-    "            summary_df.loc[current_month_idx, 'total_chicken_release_quantity']\n",
-    "        )\n",
-    "\n",
-    "        summary_df.loc[current_month_idx, 'chicken_weight_stock_balance'] = (\n",
-    "            summary_df.loc[current_month_idx, 'chicken_weight_opening_stock'] +\n",
-    "            summary_df.loc[current_month_idx, 'total_chicken_inflow_weight'] -\n",
-    "            summary_df.loc[current_month_idx, 'total_chicken_release_weight']\n",
-    "        )\n",
-    "\n",
-    "        summary_df.loc[current_month_idx, 'gizzard_weight_stock_balance'] = (\n",
-    "            summary_df.loc[current_month_idx, 'gizzard_weight_opening_stock'] +\n",
-    "            summary_df.loc[current_month_idx, 'total_gizzard_inflow_weight'] -\n",
-    "            summary_df.loc[current_month_idx, 'total_gizzard_release_weight']\n",
-    "        )\n",
+    "            summary_df.iloc[i, summary_df.columns.get_loc('gizzard_weight_stock_balance')] = (\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('gizzard_weight_opening_stock')] +\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_gizzard_inflow_weight')] -\n",
+    "                summary_df.iloc[i, summary_df.columns.get_loc('total_gizzard_release_weight')]\n",
+    "            )\n",
     "\n",
     "        # Sort in descending order (newest first) and clean up\n",
     "        summary_df = summary_df.sort_values('sort_date', ascending=False)\n",
