--- a/transformation.ipynb
+++ b/transformation.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "from google.oauth2 import service_account\n",
     "from googleapiclient.discovery import build\n",
@@ -26,7 +27,7 @@
     "}\n",
     "\n",
     "PRODUCT_TYPES = {\n",
-    "    'CHICKEN': 'chicken',\n",
+    "    'WHOLE CHICKEN': 'whole chicken',\n",
     "    'GIZZARD': 'gizzard'\n",
     "}\n",
     "\n",
@@ -165,13 +166,13 @@
     "        \n",
     "        product_summaries = {\n",
     "            'chicken_inflow': stock_inflow_df[\n",
-    "                stock_inflow_df['product_type'] == PRODUCT_TYPES['CHICKEN']\n",
+    "                stock_inflow_df['product_type'] == PRODUCT_TYPES['WHOLE CHICKEN']\n",
     "            ].groupby('year_month').agg({\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
     "            }),\n",
     "            'chicken_release': release_df[\n",
-    "                release_df['product'] == PRODUCT_TYPES['CHICKEN']\n",
+    "                release_df['product'] == PRODUCT_TYPES['WHOLE CHICKEN']\n",
     "            ].groupby('year_month').agg({\n",
     "                'quantity': 'sum',\n",
     "                'weight': 'sum'\n",
